Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/changelog/index.html
+++ b/draft/changelog/index.html
@@ -997,7 +997,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 </ul>
 </li>
 <li><code>GET /collections</code> and <code>GET /collections/{collectionId}</code>:<ul>
-<li>New field <code>deprecated</code> can be used to indicate outdated collections. Links with relation type <code>successor-version</code> can point to a newer version. <a href="https://github.com/Open-EO/openeo-api/issues/226">#226</a></li>
+<li>New field <code>deprecated</code> can be used to indicate outdated collections. Links with relation type <code>latest-version</code> can point to the latest version. <a href="https://github.com/Open-EO/openeo-api/issues/226">#226</a></li>
 <li>Added a Data Cube Dimension of type <code>bands</code> to the <code>cube:dimensions</code> property. <a href="https://github.com/Open-EO/openeo-api/issues/208">#208</a></li>
 </ul>
 </li>
@@ -1014,7 +1014,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>Bearer token are built from the authentication method, an optional provider id and the token itself. <a href="https://github.com/Open-EO/openeo-api/issues/219">#219</a></li>
 <li><code>GET /udf_runtimes</code>: <code>description</code> fields don't allow <code>null</code> values any longer.</li>
 <li><code>GET /output_formats</code> renamed to <code>GET /file_formats</code> to allow listing input file formats. <a href="https://github.com/Open-EO/openeo-api/issues/215">#215</a><ul>
-<li>The structure of the response has changed. The former response body for the output formas is now available in the property <code>output</code>.</li>
+<li>The structure of the response has changed. The former response body for the output formats is now available in the property <code>output</code>.</li>
 <li>The input file formats are now available in the property <code>input</code> with the same schema as for output formats.</li>
 <li>Additionally, each format can have a <code>title</code>.</li>
 </ul>
