Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/changelog/index.html
+++ b/draft/changelog/index.html
@@ -1013,6 +1013,11 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>Official support for <a href="https://spec.commonmark.org/0.29/changes.html">CommonMark 0.29 instead of CommonMark 0.28</a>. <a href="https://github.com/Open-EO/openeo-api/issues/203">#203</a></li>
 <li>The parameter <code>user_id</code> has been removed from the endpoints to manage user files (<code>/files/{user_id}</code>). <a href="https://github.com/Open-EO/openeo-api/issues/218">#218</a></li>
 <li><code>GET /</code>: Property <code>links</code> is required.</li>
+<li><code>GET /processes</code>:<ul>
+<li>Default values are now specified on the parameter-level, not in the JSON schemas.</li>
+<li>Multiple data types in parameters or return values are supported as arrays. Using <code>anyOf</code> is discouraged.</li>
+</ul>
+</li>
 <li><code>GET /collections</code> and <code>GET /collections/{collectionId}</code>: Updated STAC to version 0.8.1. <a href="https://github.com/Open-EO/openeo-api/issues/185">#185</a>, <a href="https://github.com/Open-EO/openeo-api/issues/204">#204</a>.</li>
 <li><code>GET /credentials/oidc</code>: Changed response to support multiple OpenID Connect identity providers (<a href="https://github.com/Open-EO/openeo-api/issues/201">#201</a>) and clarified workflow overall.</li>
 <li>Bearer token are built from the authentication method, an optional provider id and the token itself. <a href="https://github.com/Open-EO/openeo-api/issues/219">#219</a></li>
