--- a/draft/processreference/index.html
+++ b/draft/processreference/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono">
     <link rel="stylesheet" href="../assets/fonts/material-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.5/dist/DocGen.umd.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.5/dist/DocGen.css">
+    <script src="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.6.0-alpha.1/dist/DocGen.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@openeo/processes-docgen@0.6.0-alpha.1/dist/DocGen.css">
     <style>
       html, body { margin: 0; }
       #container {
