Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/processreference.html
+++ b/draft/processreference.html
@@ -79,7 +79,8 @@
       render: h => h(DocGen, {
         props: {
           document: '../processes.json',
-          categorize: true
+          categorize: true,
+          apiVersion: "1.0.0"
         }
       })
     });
