--- a/draft/processreference/index.html
+++ b/draft/processreference/index.html
@@ -79,7 +79,8 @@
       render: h => h(DocGen, {
         props: {
           document: '../processes.json',
-          categorize: true
+          categorize: true,
+          apiVersion: "1.0.0"
         }
       })
     });
