Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/draft/glossary/index.html
+++ b/draft/glossary/index.html
@@ -726,13 +726,13 @@ In the EO domain, it is common to be implicit about the temporal dimension and j
 Special cases are raster and vector data cubes.</p>
 <p>The figure below shows the data of
 a four-dimensional (8 x 8 x 2 x 2) raster data cube, with dimension names
-and values:</p>
+and labels:</p>
 <table>
 <thead>
 <tr>
 <th>#</th>
 <th>dimension name</th>
-<th>dimension values</th>
+<th>dimension labels</th>
 </tr>
 </thead>
 <tbody>
@@ -761,7 +761,7 @@ and values:</p>
 <p>dimensions x and time are aligned along the x-axis; y and band are aligned along the y-axis.</p>
 <p><img alt="Data cube example" src="../img/datacube-example.png" /></p>
 <p>Data cubes as defined here have a <em>single value</em> (scalar) for each
-unique combination of dimension values.  The value pointed to by
+unique combination of dimension labels.  The value pointed to by
 arrows corresponds to the combination of x=288847.5 (red arrow),
 y=9120661 (yellow arrow), band=red (blue arrow), time=2018-02-17 (green arrow),
 and its value is 84 (brown arrow).</p>
@@ -775,7 +775,7 @@ value</em> may be a good compromise.</p>
 <li>name</li>
 <li>axis / number</li>
 <li>type</li>
-<li>extents <em>or</em> nominal dimension values</li>
+<li>extents <em>or</em> nominal dimension labels</li>
 <li>reference systems / projections</li>
 <li>resolutions</li>
 </ul>
